Read Me Committed